--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>search-engine-service</module>
         <module>subject-partitioner</module>
+        <module>category-handler</module>
     </modules>
 
     <groupId>com.aeloaiei.dissertation</groupId>
